--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    # - asset/images/bbbb.jpg
-    - assets/images/bbbb.jpg
+    - assets/images/
+    # - assets/images/bbbb.jpg
   #   - images/a_dot_ham.jpeg
   # lib\assets\images\bbbb.jpg
 
